syntax="proto3";

package pb;

option go_package = "/pb";
import "google/protobuf/empty.proto";

service UserService {
  rpc CreateUser (google.protobuf.Empty) returns (CreateUserResponse) {}
  rpc SetBalance (SetBalanceRequest) returns (google.protobuf.Empty) {}
  rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse) {}
}

message CreateUserResponse {
  int64 user_id = 1;
}

message SetBalanceRequest {
  double balance = 1;
  int64  user_id = 2;
}

message GetBalanceRequest{
  int64 user_id = 1;
}

message GetBalanceResponse {
  double balance = 2;
}